# SimpleOcrMyPdf

./: .gitignore  README.extras.md  README.md
doc/: README.md
src/: README.md  pyproject.toml  toml_gen.py
src/simple_ocrmypdf/: about.py  desktop.py  program.py
