[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_ocrmypdf"
version = "0.1.0"
description = "Simple GUI for ocrmypdf"
readme = "README.md"
authors = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
maintainers = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only WITH Classpath-Exception-2.0 OR BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["education", "research"]
dependencies = [
    "PyQt5"
]

[project.urls]
"Bug Reports" = "https://github.com/trucomanx/SimpleOcrMyPdf/issues"
"Funding" = "https://trucomanx.github.io/en/funding.html"
"Source" = "https://github.com/trucomanx/SimpleOcrMyPdf"

[project.scripts]
"simple-ocrmypdf" = "simple_ocrmypdf.program:main"

[tool.setuptools]
packages = ["simple_ocrmypdf", "simple_ocrmypdf.modules"]

[tool.setuptools.package-data]
"simple_ocrmypdf" = ["icons/logo.png"]
